crates/cribo/tests/snapshots/ruff_lint_results@xfail_stickytape_explicit_relative_import_in_init.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_explicit_relative_import_in_init/main.py
---
RuffLintResults {
    f401_violations: [],
    f404_violations: [],
    other_violations: [],
    total_violations: 0,
}
