crates/cribo/tests/snapshots/ruff_lint_results@xfail_stickytape_script_using_from_to_import_module.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/bundling/xfail_stickytape_script_using_from_to_import_module/main.py
---
RuffLintResults {
    f401_violations: [
        "Line 5: F401 - `types` imported but unused",
    ],
    f404_violations: [],
    other_violations: [],
    total_violations: 1,
}
